--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <!-- <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
                     <li class="page-scroll">
@@ -35,7 +35,7 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -47,18 +47,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
+                    <h1>Welcome</h1>
                     <div class="page-scroll">
-                        <a class="btn btn-default" href="#about">Click me!</a>
+                        <a class="btn btn-default" href="#about">do something</a>
                     </div>
                     <br>
-                    <p>This demo is the same sort of scrolling navigation menu we use in our <a href="http://startbootstrap.com/grayscale.php">Grayscale theme</a>. Whenever you want to use the page scrolling feature, make sure the link points to an ID (<code>#about</code> for example), and that the parent of the link has the class <code>.page-scroll</code>. See how the button above and the menu bar links are formatted for a working example.</p>
+                    <p>things will go here at some point</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="about" class="about-section">
+    <!-- <section id="about" class="about-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -66,9 +66,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section id="services" class="services-section">
+    <!-- <section id="services" class="services-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <div ng-view></div>
 
