--- a/client/index.html
+++ b/client/index.html
@@ -19,81 +19,49 @@
                 </button>
                 <a class="navbar-brand" href="#page-top">quick</a>
             </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <!-- <li class="page-scroll">
-                        <a href="#about">About</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#services">Services</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#contact">Contact</a>
-                    </li> -->
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container -->
     </nav>
 
     <section id="intro" class="intro-section">
+
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Welcome</h1>
-                    <div class="page-scroll">
-                        <a class="btn btn-default" href="#about">do something</a>
-                    </div>
+
+                <div class="col-lg-12" ng-controller="searchController">
+                    <h1>Beer</h1>
+
+                    <form name="beerForm" ng-submit="findBeer()" class="simple-form">
+                        <input type="text"
+                        ng-model="data.text"
+                        placeholder="choose a style" />
+
+                        <button type="submit">submit</button>
+                    </form>
+
                     <br>
                     <p>things will go here at some point</p>
                 </div>
+
             </div>
         </div>
+
     </section>
-
-    <!-- <section id="about" class="about-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>About Section</h1>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <!-- <section id="services" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Services Section</h1>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact" class="contact-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Contact Section</h1>
-                </div>
-            </div>
-        </div>
-    </section> -->
-
-    <div ng-view></div>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
-
-    <!-- // <script src="app/services/services.js"></script> -->
+    <script src="bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
+    <script src="app/tools/button.js"></script>
+    <script src="app/tools/main.js"></script>
+    <script src="app/tools/search.js"></script>
+    <script src="app/services/services.js"></script>
     <script src="app/app.js"></script>
   </body>
 </html>
