--- a/client/index.html
+++ b/client/index.html
@@ -58,7 +58,7 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
-    <script src="app/tools/button.js"></script>
+    <!-- // <script src="app/tools/button.js"></script> -->
     <script src="app/tools/main.js"></script>
     <script src="app/tools/search.js"></script>
     <script src="app/services/services.js"></script>
