added firebase backend

--- a/client/index.html
+++ b/client/index.html
@@ -25,12 +25,18 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="#liked">Liked Beers</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#disliked">Disliked Beers</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section id="intro" class="intro-section">
+    <!-- <section id="intro" class="intro-section">
 
         <div class="container">
             <div class="row">
@@ -53,15 +59,18 @@
             </div>
         </div>
 
-    </section>
+    </section> -->
+    <div ng-view></div>
 
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
     <!-- // <script src="app/tools/button.js"></script> -->
-    <script src="app/tools/main.js"></script>
-    <script src="app/tools/search.js"></script>
-    <script src="app/services/services.js"></script>
-    <script src="app/app.js"></script>
+    <!-- // <script src="app/tools/main.js"></script> -->
+    <!-- // <script src="app/tools/search.js"></script> -->
+    <!-- // <script src="app/services/services.js"></script> -->
+    <!-- // <script src="app/app.js"></script> -->
+    <script src="index.js"></script>
+
   </body>
 </html>
