--- a/client/app/main.html
+++ b/client/app/main.html
@@ -1,15 +1,24 @@
 <section id="intro" class="intro-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1>Welcome</h1>
-                <div class="page-scroll">
-                  <a class="btn btn-default">do something</a>
-                    <!-- <a class="btn btn-default" href="#about">do something</a> -->
+
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-12" ng-controller="searchController">
+                    <h1>Beer</h1>
+
+                    <form name="beerForm" ng-submit="findBeer()" class="simple-form">
+                        <input type="text"
+                        ng-model="data.text"
+                        placeholder="choose a style" />
+
+                        <button type="submit">submit</button>
+                    </form>
+
+                    <br>
+                    <p>things will go here at some point</p>
                 </div>
-                <br>
-                <p>things will go here at some point</p>
+
             </div>
         </div>
-    </div>
+
 </section>
