a bit more focused

--- a/client/app/main.html
+++ b/client/app/main.html
@@ -7,11 +7,11 @@
                     <h1>Beer</h1>
 
                     <form name="beerForm" ng-submit="findBeer()" class="simple-form">
-                        <input type="text"
+                        <!-- <input type="text"
                         ng-model="data.text"
-                        placeholder="choose a style" />
+                        placeholder="choose a style" /> -->
 
-                        <button type="submit">submit</button>
+                        <button type="submit">where is the beer?</button>
                     </form>
 
                     <br>
