--- a/client/app/main.html
+++ b/client/app/main.html
@@ -7,12 +7,15 @@
                     <h1>Beer</h1>
 
                     <form name="beerForm" ng-submit="findBeer()" class="simple-form">
-                        <!-- <input type="text"
-                        ng-model="data.text"
-                        placeholder="choose a style" /> -->
-
                         <button type="submit">where is the beer?</button>
                     </form>
+                    <div class="locations"
+                        ng-repeat="item in data.beer">
+                        <li>
+                            {{ item }}
+                        </li>
+
+                    </div>
 
                     <br>
                     <p>things will go here at some point</p>
