--- a/client/app/main.html
+++ b/client/app/main.html
@@ -6,18 +6,28 @@
                 <div class="col-lg-12" ng-controller="searchController">
                     <h1>Beer</h1>
 
-                    <form name="beerForm" ng-submit="findBeer()" class="simple-form">
+                    <form name="beerForm" ng-submit="findBeer()" class="simple-form" >
                         <button type="submit">where is the beer?</button>
                     </form>
                     <!-- make this less ugly, make then links that show tap lists -->
+
                     <div class="locations"
                         ng-repeat="item in data.beer">
-                        <!-- <br> -->
-                            <p name="barName" ng-click="beerList()">{{ item.name }}</p>
-                    </div>
 
+                        <div name="barName">
+                            <p ng-click="show=!show"><b>{{ item.name }}</b></p>
+
+                            <div ng-show="show">
+                                <!-- make these clickable, to send to server and store on user -->
+                                <div class="beers" ng-repeat="beer in item.beer">
+                                    <!-- add search and style, previously rated -->
+                                    <p name="breweryName">{{ beer.brewery }}</p>
+                                    <p name="beerName" ng-click="saveBeer(beer)">{{ beer.name }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <br>
-                    <!-- make this conditional -->
                 </div>
 
             </div>
