--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <title>Quick</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/scrolling-nav.css" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+
 
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
