--- a/client/app/liked.html
+++ b/client/app/liked.html
@@ -5,8 +5,11 @@
 
                 <div class="col-lg-12" ng-controller="likedController">
                     <h1>liked</h1>
-                    <br>
-                    <p>things will go here at some point</p>
+                    <input ng-model='search' placeholder='find beer' />
+                    <div class="locations" ng-repeat="beer in data.server | filter:search">
+                      <p class="breweryName">{{ beer.brewery }}</p>
+                      <p class="beerName" >{{ beer.name }}</p>
+                    </div>
                 </div>
 
             </div>
