--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="styles/scrolling-nav.css" />
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
 
-
   </head>
   <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
     <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
@@ -32,6 +31,9 @@
                     </li>
                     <li class="page-scroll">
                         <a href="#disliked">Disliked Beers</a>
+                    </li>
+                    <li class="page-scroll" ng-controller="loginController">
+                        <a href="#" ng-click="login()">Login with Google</a>
                     </li>
                 </ul>
             </div>
@@ -65,6 +67,8 @@
     <div ng-view></div>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/firebase/firebase.js"></script>
+    <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
+
     <script src="bower_components/angularfire/angularfire.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angularjs-geolocation/dist/angularjs-geolocation.min.js"></script>
